--- a/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home.xml
@@ -8,15 +8,15 @@
     tools:context=".Activities.Fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+
+    <Button
+        android:id="@+id/allLibraries_home_fragment"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Home"
-        android:textAlignment="center"
+        android:text="All Libraries"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </android.support.constraint.ConstraintLayout>
