--- a/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
@@ -42,13 +42,12 @@
                     app:riv_corner_radius="300dp" />
 
                 <ImageButton
-                    android:id="@+id/imageButton3"
+                    android:id="@+id/profile_fragment_edit_button"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="24dp"
                     android:background="@android:color/transparent"
-                    android:onClick="editProfile"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_edit_profile"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -117,18 +116,16 @@
             </android.support.constraint.ConstraintLayout>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/profile_fragment_rated_books_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="readBooks"
-                android:text="Read Books" />
+                android:text="Rated Books" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/profile_fragment_logout_button"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="logout"
                 android:text="LOGOUT" />
         </LinearLayout>
     </ScrollView>
