--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
@@ -8,15 +8,18 @@
     tools:context=".Activities.Fragments.CalendarFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView6"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_calendar_recycle"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="32dp"
-        android:text="Calendar"
-        android:textAlignment="center"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
+        android:overScrollMode="never"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/fragment_calendar_item" />
 </android.support.constraint.ConstraintLayout>
