--- a/EasyLib/app/src/main/res/layout-normal/rated_books_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/rated_books_item.xml
@@ -20,4 +20,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius="4dp" />
 
+    <LinearLayout
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/rated_books_item_rate"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_weight="3"
+            android:fontFamily="monospace"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@color/colorYellow"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="15dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/ic_star" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
