--- a/EasyLib/app/src/main/res/layout-normal/list_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/list_activity.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/library_list_recycle"
+                android:id="@+id/list_recycle"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="24dp"
@@ -37,8 +37,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/library_list_item" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
