--- a/EasyLib/app/src/main/res/layout-normal/news_list_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/news_list_item.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/item_layout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@drawable/round_rect_shadow"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/round_rect_shadow_gray"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
         android:paddingTop="10dp"
         android:paddingRight="30dp"
-        android:layout_marginRight="15dp"
         android:visibility="visible">
 
         <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/book_item_img"
+            android:id="@+id/news_item_img"
             android:layout_width="60dp"
             android:layout_height="80dp"
             android:scaleType="fitXY"
@@ -26,39 +27,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/book_item_title"
-                android:layout_width="wrap_content"
+                android:id="@+id/news_item_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Title"
-                android:textSize="18sp"
+                android:singleLine="true"
+                android:text="News Name"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/book_item_author"
+                android:id="@+id/news_item_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Author"
-                android:textSize="16sp"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/book_item_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Location" />
+                android:singleLine="true"
+                android:text="00/00/0000"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
