--- a/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
@@ -114,15 +114,14 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/profile_fav_lib_recycle"
                     android:layout_width="0dp"
-                    android:layout_height="300dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:overScrollMode="never"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView16"
-                    tools:listitem="@layout/library_list_item" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView16" />
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
