--- a/EasyLib/app/src/main/res/layout-normal/library_list_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/library_list_item.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="sans-serif-smallcaps"
                 android:singleLine="true"
                 android:text="Library Name"
                 android:textSize="20sp"
@@ -47,10 +48,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:fontFamily="monospace"
                 android:singleLine="true"
                 android:text="via non la so (MI)"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:fontFamily="sans-serif-condensed" />
 
         </LinearLayout>
 
