--- a/EasyLib/app/src/main/res/layout-normal/login.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login.xml
@@ -71,7 +71,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="sans-serif-medium"
         android:hint="Email"
         android:inputType="textPersonName"
         android:textAlignment="center"
@@ -89,7 +89,7 @@
         android:layout_height="45dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="sans-serif-medium"
         android:hint="Password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
