Made Fixes on Login & Registration Activities

--- a/EasyLib/app/src/main/res/layout-xlarge/login.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/login.xml
@@ -92,7 +92,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-medium"
         android:hint="Password"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionSend"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@android:color/white"
