--- a/EasyLib/app/src/main/res/layout-normal/register.xml
+++ b/EasyLib/app/src/main/res/layout-normal/register.xml
@@ -87,6 +87,7 @@
                 android:ems="10"
                 android:hint="Password"
                 android:inputType="textPassword"
+                android:imeOptions="actionSend"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/darker_gray"
