--- a/EasyLib/app/src/main/res/drawable/round_label_gray.xml
+++ b/EasyLib/app/src/main/res/drawable/round_label_gray.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     // Shadow
-    <item android:left="5dp" android:top="5dp">
+    <item android:right="3dp" android:bottom="3dp">
         <shape>
             <solid android:color="#66000000"/>
             <corners android:radius="10dp"/>
@@ -11,16 +11,12 @@
     // Item
     <item>
         <shape>
-            <solid android:color="#c4c4c4"/>
-
-            <stroke android:width="3dp"
-                android:color="#50cccccc"
-                />
+            <solid android:color="#e0eeeeee"/>
 
             <padding android:left="10dp"
-                android:top="3dp"
+                android:top="5dp"
                 android:right="10dp"
-                android:bottom="3dp"
+                android:bottom="5dp"
                 />
 
             <corners android:radius="10dp"/>
