Fixed BookList Adapter

--- a/EasyLib/app/src/main/res/layout-normal/book_list_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/book_list_item.xml
@@ -29,16 +29,18 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/book_item_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:singleLine="true"
                 android:text="Title"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -46,16 +48,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:singleLine="true"
                 android:text="Author"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/book_item_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Location" />
 
         </LinearLayout>
 
