Update of ReadBooks

--- a/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_profile.xml
@@ -172,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="All Rated Books"
+                    android:text="All Read Books"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="serif-monospace"
-                    android:text="Rated Books"
+                    android:text="Read Books"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
@@ -196,7 +196,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/profile_rated_books_recycle"
                     android:layout_width="0dp"
-                    android:layout_height="130dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
