Fixed some layouts

--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.CalendarFragment">
+    tools:context=".Activities.Fragments.MainActivity">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -13,10 +13,11 @@
         android:id="@+id/fragment_calendar_recycle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="16dp"
         android:overScrollMode="never"
+        android:scrollbarSize="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
